data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_280.wast
;; 1. **Test with `nop` inside a `loop` followed by `br 0` (loop back to the start)**:    - **Constraint**: Ensures that `nop` inside a loop doesn’t affect control flow causing an infinite loop.    - **Relation to Infinite Loops**: If `nop` improperly affects the loop, `br 0` won't exit after the intended iterations.

(assert_invalid
  (module
    (func $invalid_nop_in_loop
      (loop
        nop
        (br 0)
      )
    )
  )
  "type mismatch"
)